# ez-solver

./: .gitignore  README.md  pyproject.toml
ez_solver/: __init__.py  _registry.py
tests/: test_ez_solver.py
